<?xml version="1.0"?>
<package format="3">
  <name>esvo_cartesian3dgrid</name>
  <version>0.0.0</version>
  <description>Cartesian 3D grid</description>
  <maintainer email="guillermo.gallego@ifi.uzh.ch">Guillermo Gallego</maintainer>

  <license>see LICENSE</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 equivalent dependencies -->
  <depend>cv_bridge</depend>
  <!-- For cnpy_catkin, if there's no direct ROS2 equivalent, you may need to include it differently,
       perhaps as an external project or find a compatible package -->
  <!-- <depend>your_ros2_equivalent_for_cnpy_catkin</depend> -->

  <!-- Additional ROS2 dependencies -->
  <!-- Include any new dependencies your package may need in ROS2 context -->

  <export>
    <!-- ROS2 doesn't require anything specific in the export tag for most packages -->
  </export>
</package>
