<?xml version="1.0"?>
<package format="3">
  <name>esvo_core</name>
  <version>0.0.0</version>
  <description>The esvo_core package for ROS2.</description>
  <maintainer email="eeyzhou@ust.hk">Yi Zhou</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Convert ROS1 dependencies to ROS2 equivalents -->
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend> <!-- pcl_ros is replaced by pcl_conversions in ROS2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend> <!-- for tf2 conversions -->
  <depend>rclcpp</depend>
  <!-- Add any ROS2 equivalents for the ROS1 dependencies that are missing -->

  <export>
    <!-- ROS2 does not use dynamic_reconfigure, use ROS2 parameters instead -->
  </export>
</package>
