<?xml version="1.0"?>
<package format="3">
  <name>esvo_time_surface</name>
  <version>0.0.0</version>
  <description>The esvo_time_surface package.</description>
  <maintainer email="eeyzhou@ust.hk">Yi Zhou</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dvs_msgs</depend> <!-- Make sure dvs_msgs has a ROS2 version -->

  <export>
    <!-- Information for other packages to consume -->
  </export>
</package>
