<?xml version="1.0"?>
<package format="3">
  <name>events_repacking_helper</name>
  <version>0.0.0</version>
  <description>The events_repacking_helper package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Other export tags are optional and depend on your package's needs -->
  </export>
</package>
